--- a/modelling_cycle_hire.ipynb
+++ b/modelling_cycle_hire.ipynb
@@ -7,7 +7,7 @@
    },
    "source": [
     "# Predicting Bike Rentals Using Machine Learning\n",
-    "The aim of this analysis is to build machine learning models to predict the number of bikes rented through a cycle hire scheme, in a given hour, and to compare the accuracy of ddifferent kinds of models.\n",
+    "The aim of this analysis is to build machine learning models to predict the number of bikes rented through a cycle hire scheme, in a given hour, and to compare the accuracy of different kinds of models.\n",
     "\n",
     "Hadi Fanaee-T at the University of Porto compiled data on the use of the Washington D.C. cycle hire scheme into a CSV file. The file contains 17380 rows, with each row representing the number of bike rentals for a single hour of a single day. The data can be downloaded from the University of California, Irvine's _[website](http://archive.ics.uci.edu/ml/datasets/Bike+Sharing+Dataset)_.\n",
     "\n",
